--- a/Manuscript/references.bib
+++ b/Manuscript/references.bib
@@ -128,6 +128,16 @@ But we cannot even imagine how many factors a single honeybee takes into account
   year={2009},
   publisher={Wiley Online Library}
 }
+  author    = {Ohtsuki, Hisashi and Bordalo, Pedro and Nowak, Martin A},
+  journal   = {Journal of theoretical biology},
+  title     = {The one-third law of evolutionary dynamics},
+  year      = {2007},
+  number    = {2},
+  pages     = {289--295},
+  volume    = {249},
+  publisher = {Elsevier},
+}
+
 
 
 @Comment{jabref-meta: databaseType:bibtex;}
